Agggiornata la classe Recurrent per implementare LSTM e GRU correzione degli errori in fase di compilazione

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,9 @@ set(ML_LIBRARY_SOURCES
     
     # Layers
     layers/dense.cpp
+    layers/convolutional.cpp
+    layers/pooling.cpp
+    layers/recurrent.cpp
     
     # Activation
     activation/activation.cpp
